@@ -91,6 +91,19 @@ AC_TRY_COMPILE(,[
 void monkey() __attribute__((malloc));
 ],AC_MSG_RESULT("yes"); CFLAGS="$SAVE_CFLAGS -DMALLOC_OK", AC_MSG_RESULT("no"); CFLAGS="$SAVE_CFLAGS")
 
+# FIXME !!!!!!!!
+# AC_MSG_CHECKING("whether __builtin_expect is understood")
+# SAVE_CFLAGS=$CFLAGS
+# CFLAGS="-Werror $CFLAGS"
+# AC_TRY_COMPILE(,[
+# int main() {
+#    int i;
+#    if (__builtin_expect(i, 0)) {
+#    }
+# }
+# ],AC_MSG_RESULT("yes"); BKCFLAGS="$BKCFLAGS -DEXPECT_OK", AC_MSG_RESULT("no");)
+# CFLAGS=$SAVE_CFLAGS 
+ 
  
 AC_MSG_CHECKING(for x86 architecture)
 AX_COMPILE_OPTION(CONFIG_X86,x86=1,x86=0)
