@@ -1,3 +1,11 @@
+2001-09-21  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/opd_proc.c: removed over-verbose line
+
+	* configure.in:
+	* oprofile.h:
+	* oprofile.c: add likely/unlikely, take note lock on dump
+ 
 2001-09-21  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/opf_filter.h: move declaration of counter_array_t to
